--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -42,6 +42,7 @@ nav { font-size: 1.2em; font-weight: lighter; }
 nav .fa { display: block; text-align: center; margin-bottom: 13px; }
 
 .navbar {
+	position:absolute;
 	background: #283147;
 	min-height: 85px;	
 	border-radius: 0px; 
